xserver-xorg-input-keyboard (1:1.4.0-1) UNRELEASED; urgency=low

  * New upstream release.
  * Bump the build-dep on xutils-dev (>= 1:7.5~1).
  * Build against Xserver 1.7.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Sat, 05 Dec 2009 01:49:03 +0200

xserver-xorg-input-keyboard (1:1.3.2-4) unstable; urgency=low

  * Add README.source, bump Standards-Version to 3.8.3.
  * Install fdi file to pick up the kbd driver on kfreebsd (closes: #541140).
    Thanks, Aurélien Jarno!

 -- Julien Cristau <jcristau@debian.org>  Sun, 23 Aug 2009 11:02:41 +0200

xserver-xorg-input-keyboard (1:1.3.2-3) unstable; urgency=low

  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Thu, 09 Apr 2009 16:17:44 +0100

xserver-xorg-input-keyboard (1:1.3.2-2) experimental; urgency=low

  * Build against xserver 1.6 rc1.

 -- Julien Cristau <jcristau@debian.org>  Thu, 22 Jan 2009 14:08:28 +0100

xserver-xorg-input-keyboard (1:1.3.2-1) experimental; urgency=low

  * New upstream release.
  * Run autoreconf on build; build-depend on automake, libtool and xutils-dev
    >= 1:7.4+4.
  * Handle parallel builds.

 -- Julien Cristau <jcristau@debian.org>  Wed, 21 Jan 2009 22:19:05 +0100

xserver-xorg-input-keyboard (1:1.3.1-2) experimental; urgency=low

  * Build against xserver 1.5 rc5.

 -- Julien Cristau <jcristau@debian.org>  Mon, 14 Jul 2008 02:09:52 +0200

xserver-xorg-input-keyboard (1:1.3.1-1) unstable; urgency=low

  * New upstream release.
    + Manpage says kbd replaced keyboard, closes: #443452.
  * Bump Standards-Version to 3.7.3 (no changes).
  * The Vcs-* fields are now recognized by dpkg, so drop the XS- prefix.
  * Run dpkg-shlibdeps with --warnings=6.  Drivers reference symbols from
    /usr/bin/Xorg and other modules, and that's not a bug, so we want
    dpkg-shlibdeps to shut up about symbols it can't find.
    + Build-depend on dpkg-dev >= 1.14.17.
  * Update debian/copyright according to the new upstream one.
